<resources>
    <string name="app_name">moviedb</string>
    <string name="moviename">MovieName</string>
    <string name="year">Year</string>
    <string name="rating">Rating</string>
    <string name="textview">TextView</string>
    <string name="top3caption">Топ три</string>
    <string name="someMovies">Все подряд</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="fail">БЕДА</string>
    <string name="internet_fail">нет интeрнета</string>
    <string name="refresh">обновить</string>
    <string name="back">назад</string>
</resources>