<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="view.Error">

    <!-- TODO: Update blank fragment layout -->

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/fail"
        android:textSize="80sp" />

    <TextView
        android:id="@+id/textView3"
        android:textSize="40sp"
        android:layout_gravity="center_horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/internet_fail"
        />

    <Space
        android:layout_width="match_parent"
        android:layout_height="@dimen/space_height" />

    <Button
        android:id="@+id/button"
        android:layout_gravity="center_horizontal"

        android:layout_marginStart="@dimen/button_margin"
        android:layout_marginEnd="@dimen/button_margin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/refresh" />

    <Button
        android:id="@+id/button2"
        android:layout_marginStart="@dimen/button_margin"
        android:layout_marginEnd="@dimen/button_margin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/back" />

</LinearLayout>